plugins {
    id 'java'
}

group 'me.senkoco'
version '1.3.0'

repositories {
    mavenCentral()
    mavenLocal()

    maven { url = 'https://repo.glaremasters.me/repository/towny/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.20.6-R0.1-SNAPSHOT'
    compileOnly 'com.palmergames.bukkit.towny:towny:0.100.4.4'
    compileOnly files("libs/TownyMenus-0.0.8.jar")
}

sourceCompatibility = targetCompatibility = '17'
compileJava.options.encoding = 'UTF-8'
setLibsDirName('../builds')
